web/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp.local
      http:
        paths:
        - path:
          backend:
            serviceName: php-apache-service
            servicePort: 80
    - host: phpmyadmin.local
      http:
        paths:
        - path:
          backend:
            serviceName: phpmyadmin-service
            servicePort: 80
    - host: prometheus.local
      http:
        paths:
        - path:
          backend:
            serviceName: prometheus-service
            servicePort: 9090
